# NASA2019_Project

./: 2019NASA_Hackathon_FinalSlide.pptx  LICENSE  README.md
Missing Data Imputation/: Imputation.py  README.md
NASA2019_Project_Edge/: CMakeLists.txt  Push_Res_To_Device.sh  README.md  execute_process.sh
NASA2019_Project_Edge/res/: nasa_srmodel.onnx  nasa_srmodel.tflite
NASA2019_Project_Edge/res/keras_model/: model_config.json  weights.h5
NASA2019_Project_Edge/res/saved_model/1/: saved_model.pb
NASA2019_Project_Edge/res/saved_model/1/variables/: variables.data-00000-of-00001  variables.index
NASA2019_Project_Edge/src/: NeuroPilotTFLiteShim.h  TFLiteRNN.cpp  TFLiteSR.cpp
NASA2019_Project_Edge/src/utils/: converters.py  postprocess_img.py  preprocess_img.py  target.bin.npy  tmp_cv2_cb.npy  tmp_cv2_cr.npy  worker.py
Super_Resolution/: README.md  compression.py  data.py  nasa_srmodel.onnx  nasa_srmodel_rePS.onnx  super_onnx_rePS.py  super_resolve.py
Super_Resolution/cpp_onnx/: super_cpp.cpp
super_resolution/: README.md  model.py  model_epoch_200.pth  nasa_srmodel.onnx  psnr_function.py  super_onnx_batcheval.py  super_resolve.py  super_resolve_rePS.py
super_resolution_denoise/: README.md  dataset.py  main.py  model_epoch_200.pth  super_onnx.py
tmp_share/: nasa_srmodel_rm.onnx
